# stevensStringLib

./: .clang-format  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  COMMIT_MESSAGE.txt  Doxyfile  IMPLEMENTATION_SUMMARY.md  KNOWN_ISSUES.md  LICENSE  QUICK_START.md  README.md  TESTING.md  main.cpp  stevensStringLib.h  test  test.cpp
.github/: FUNDING.yml
.github/workflows/: ci.yml
benchmarking/: CMakeLists.txt  benchmark.cpp
benchmarking/benchmarks/: benchmark_join.cpp  benchmark_main.cpp  benchmark_separate.cpp  benchmark_validation.cpp
docs/: Doxyfile  Open documentation
docs/docs/html/: index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacestevensStringLib.html  pages.html  stevensStringLib_8h_source.html
docs/docs/html/search/: all_0.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_c.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  functions_8.js  functions_a.js  namespaces_0.js  searchdata.js
docs/html/: deprecated.html  files.html  index.html  md_README.html  md__2home_2jeff_2stevensStringLib_2README.html  namespacemembers.html  namespacemembers_func.html  namespacestevensStringLib.html  pages.html  stevensStringLib_8h.html  stevensStringLib_8h_source.html  stevensStringLib_README.html
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  pages_2.js  searchdata.js
scripts/: compare_benchmarks.py  run_benchmarks.sh  run_tests.sh
testing/: CMakeLists.txt  test  test.cpp
testing/build_of_test/: CMakeCache.txt  Makefile  cmake_install.cmake  test
testing/build_of_test/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
testing/build_of_test/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
testing/build_of_test/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
testing/fixtures/: test_data.h
testing/unit/: property_based_test.cpp  string_conversion_test.cpp  string_manipulation_test.cpp  string_searching_test.cpp  string_validation_test.cpp
